# aubo_robot

./: .gitignore  README  README.md  README.md~  README~
aubo_controller/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
aubo_controller/include/: aubo_robot_simulator.h  aubo_trajectory_planning.h  joint_trajectory_action.cpp~  joint_trajectory_action.h
aubo_controller/script/: aubo_i5l_controller.py~
aubo_controller/script/aubo_controller/: aubo_robot_simulator  aubo_robot_simulator.py  aubo_robot_simulator_old  aubo_robot_simulator~  aubo_ros_plan.py  driver.py  joint.py  trajectory_speed.py
aubo_controller/src/: CMakeLists.txt~  aubo_planner_test.cpp  aubo_robot_simulator.cpp  aubo_trajectory_planning.cpp  joint_trajectory_action.cpp
aubo_demo/: CMakeLists.txt  README.md  RRADME.md  package.xml
aubo_demo/launch/: MoveGroupInterface_To_Indigo.launch  MoveGroupInterface_To_Kinetic.launch  MoveGroupInterface_To_Melodic.launch  MoveGroupInterface_To_Noetic.launch  move_group_interface_tutorial.launch
aubo_demo/src/: AuboTest_kinematic_kinetic.cpp  AuboTest_kinetic.cpp  MoveGroupInterface_To_Indigo.cpp  MoveGroupInterface_To_Kinetic.cpp  MoveGroupInterface_To_Melodic.cpp  MoveGroupInterface_To_Noetic.cpp  move_group_interface_tutorial.cpp
aubo_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  package.xml~
aubo_description/config/: joint_names_aubo_e3.yaml
aubo_description/launch/: display.launch  gazebo.launch
aubo_description/meshes/GreyOrange/: arm_mount.STL  base_frame.STL
aubo_description/meshes/aubo_i10/: base_link.DAE  base_link.STL  foreArm_Link.DAE  foreArm_Link.STL  shoulder_Link.DAE  shoulder_Link.STL  upperArm_Link.DAE  upperArm_Link.STL  wrist1_Link.DAE  wrist1_Link.STL  wrist2_Link.DAE  wrist2_Link.STL  wrist3_Link.DAE  wrist3_Link.STL
aubo_description/meshes/aubo_i5l/: arm_mount.stl  arm_mount2.stl  base_frame.stl  base_link.STL  foreArm_Link.STL  foreArm_Link3.STL  gripper.stl  shoulder_Link2.stl  u_Link.STL  upperArm_Link.STL  w2_Link.STL
aubo_description/meshesL/: llllll.dae  shoulder_Link.STL  w1_Link.STL  wrist2_Link.STL  wrist3_Link.STL
aubo_description/urdf/: OUR-i5-l.SLDASM.URDF.xacro~  aubo.gazebo.xacro  aubo.transmission.xacro  aubo_e5.urdf  aubo_e5.urdf.xacro  aubo_e5.xacro  aubo_greyorange.urdf  aubo_i10.urdf  aubo_i16.urdf  aubo_i3.urdf  aubo_i3.urdf~  aubo_i5.urdf  aubo_i5.urdf.xacro  aubo_i5.urdf.xacro~  aubo_i5.urdf~  aubo_i5L.urdf  aubo_i5L.urdf.xacro  aubo_i5L.urdf~  aubo_i5L_robot.urdf.xacro  aubo_i5_robot.urdf.xacro  aubo_i5_robot.urdf.xacro~  aubo_i5l.urdf.xacro  aubo_i5l_robot.urdf.xacro  aubo_i7.urdf  common.gazebo.xacro  materials.xacro
aubo_driver/: CHANGELOG.rst  CMakeLists.txt  IO Control.md  README.md  README.md~  package.xml
aubo_driver/cmake/: FindAuBo.cmake  Findcontrol_api (copy).cmake  Findcontrol_api.cmake  Findcontrol_api.cmake~
aubo_driver/config/: auborobot.conf  tracelog.properties
aubo_driver/include/aubo_driver/: AuboRobotMetaType.h  aubo_driver.h  aubo_driver.h.autosave  robot_state.h  robotiomatetype.h  serviceinterface.h
aubo_driver/launch/: aubo_i5_bringup.launch  aubo_i5_moveit.launch
aubo_driver/lib/lib64/: libauborobotcontroller.so.1  libauborobotcontroller.so.1.0  libauborobotcontroller.so.1.2  libauborobotcontroller.so.1.2.4  libauborobotcontroller.so.1.2.6  libauborobotcontroller.so.1.2.8  libauborobotcontroller.so.1.2.9  libconfig.so.9.2.0
aubo_driver/src/: aubo_driver.cpp  aubo_gazebo_driver.cpp  aubo_io_control.cpp  driver_node.cpp  driver_node.cpp~  move.cpp  testAuboAPI.cpp  testExtServer.cpp  testIO.cpp  test_india.bak.cpp  test_india.cpp
aubo_i5l_moveit_config/: .CMakeLists.txt.swp  .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
aubo_i5l_moveit_config/config/: aubo_i5L_robot.srdf  controllers.yaml  fake_controllers.yaml  joint_names.yaml  ompl_planning.yaml
aubo_i5l_moveit_config/launch/: aubo_i5.rviz  aubo_i5L_robot_moveit_controller_manager.launch.xml  aubo_i5l_moveit_controller_manager.launch  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit2.rviz  moveit_planning_execution.launch  moveit_planning_execution.launch~  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml~  warehouse.launch
aubo_kinematics/: CHANGELOG.rst  CMakeLists.txt  aubo_moveit_plugins.xml  package.xml
aubo_kinematics/src/: aubo_moveit_plugin.cpp  kinematics.cpp
aubo_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
aubo_msgs/include/: SetIORequest.h~  Untitled Document~
aubo_msgs/msg/: Digital.msg  GoalPoint.msg  IOState.msg  IOState.msg~  TraPoint.msg
aubo_msgs/srv/: ClearExternError.srv  ExtMove.srv  GetFK.srv  GetIK.srv  SetIO.srv  ToolDynamicParam.srv
aubo_panel/: CHANGELOG.rst  CMakeLists.txt  README.md~  aubo_rviz_plugins.xml  package.xml
aubo_panel/src/: aubopanel.cpp  aubopanel.ui
aubo_panel/srv/: ControlMode.srv
aubo_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml
aubo_planner/src/: aubo_planner_test.cpp  aubo_ros_plan.cpp  test_7dof.cpp
aubo_robot/: CHANGELOG.rst  CMakeLists.txt  TODO.list~  package.xml  problem.list~
aubo_trajectory_filters/: CMakeLists.txt  CMakeLists.txt~  package.xml  planning_request_adapters_plugin_description.xml  planning_request_adapters_plugin_description.xml~
aubo_trajectory_filters/include/: cubic_spline_filter.h  filter_base.h
aubo_trajectory_filters/src/: cubic_spline_filter.cpp
dexf_i5l_package/: CMakeLists.txt  package.xml
dexf_i5l_package/launch/: aubo_i5.launch  aubo_i5_gazebo.launch  aubo_i5_rviz.launch  aubo_i5_upload.launch  simple.launch
dexf_i5l_package/meshesL/: f1_Link.STL  s_Link.STL  wrist1_Link.STL
dexf_i5l_package/urdf/: aubo.gazebo.xacro  aubo.transmission.xacro  aubo_i5L.urdf  aubo_i5L.urdf.xacro  aubo_i5L_robot.urdf.xacro  common.gazebo.xacro  materials.xacro  robot_gripper_pedestal.xacro
(+387 files in other folders)
