<?xml version="1.0"?>
<package>
  <name>aubo_description</name>
  <version>1.3.1</version>
  <description>The aubo_description package</description>
  <author email="liug@our-robotics.com">liuxin</author>
  <maintainer email="liug@our-robotics.com">liuxin</maintainer>
  <url type="website">http://wiki.ros.org/aubo_description</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
