<?xml version="1.0"?>
<package>
  <name>aubo_kinematics</name>
  <version>0.3.7</version>
  <description>
     Provides forward and inverse kinematics for Aubo Robots designs.
  </description>

  <author email="zhaoyu@aubo-robotics.com">liuxin</author>
  <maintainer email="zhaoyu@aubo-robotics.com">liuxin</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/aubo_kinematics</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_kinematics</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>boost</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>moveit_kinematics</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>boost</run_depend>

  <export>
    <moveit_core plugin="${prefix}/aubo_moveit_plugins.xml"/>
  </export>
</package>
