<?xml version="1.0"?>
<package>
  <name>aubo_msgs</name>
  <version>1.3.1</version>
  <description>The aubo_msgs package</description>

  <author email="liug@our-robotics.com">liuxin</author>
  <maintainer email="liug@our-robotics.com">liuxin</maintainer>
 
  <url type="website">http://wiki.ros.org/aubo_msgs</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
