<?xml version="1.0"?>
<package>
  <name>aubo_panel</name>
  <version>1.3.1</version>
  <description>The aubo_panel plugin package</description>

  <author email="liug@our-robotics.com">liuxin</author>
  <maintainer email="liug@our-robotics.com">liuxin</maintainer>
  <url type="website">http://wiki.ros.org/aubo_control</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>aubo_msgs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>class_loader</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>aubo_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>class_loader</run_depend>
 
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rviz plugin="${prefix}/aubo_rviz_plugins.xml"/>
  </export>
</package>
