<?xml version="1.0"?>
<package>
  <name>aubo_robot</name>
  <version>1.3.3</version>
  <description>
	Description,drivers, moveit and utilities for AUBO Robot Arms.
  </description>

  <author email="liug@our-robotics.com">Allen Liu</author>
  <maintainer email="liug@our-robotics.com">Allen Liu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>aubo_panel</run_depend>
  <run_depend>aubo_i5_moveit_config</run_depend>
  <run_depend>aubo_description</run_depend>
  <run_depend>aubo_msgs</run_depend>
  <run_depend>aubo_control</run_depend>
  <run_depend>aubo_driver</run_depend>
  <run_depend>aubo_new_driver</run_depend>
  <run_depend>aubo_gazebo</run_depend>
  <run_depend>aubo_kinematics</run_depend>
  <run_depend>aubo_trajectory</run_depend>
  <run_depend>aubo_trajectory_filters</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <metapackage/>
  </export>
</package>
