<package>
  <name>aubo_trajectory_filters</name>
  <version>0.4.3</version>
  <description>
   <p>
     ROS Industrial libraries/plugins for filtering trajectories.
   </p>
   <p>
     This package is part of the AUBO program and contains libraries
     and moveit plugins for filtering robot trajectories.
   </p>
  </description>
  <author email="liug@our-robotics.com">Shaun Edwards</author>
  <maintainer email="liug@our-robotics.com">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/lg609/aubo_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>trajectory_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <run_depend>trajectory_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>orocos_kdl</run_depend>

  <export>	
    <moveit_core plugin="${prefix}/planning_request_adapters_plugin_description.xml"/> 
  </export>
</package>
