<?xml version="1.0"?>
<package>
  <name>dexf_i5l_package</name>
  <version>1.0.0</version>
  <description>
      URDF description for GOR DEXF Aubo I5L robot arms
  </description>

  <author>Anirudh Shekhawat</author>
  <author email="anirudh.s@greyorange.sg">Anirudh Shekhawat</author>
  <maintainer email="anirudh.s@greyorange.sg">Anirudh Shekhawat</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>